[package]
name = "wasm-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
wasm-bindgen = { version = "0.2.89" }
js-sys = { version = "0.3.66" }
web-sys = { version = "0.3.66", features = [
    "console",
    "Window",
    "Navigator",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "MessageEvent",
    "Event",
    "DedicatedWorkerGlobalScope",
    "Document",
    "Element",
] }
once_cell = { version = "1.19.0" }
console_error_panic_hook = { version = "0.1.7" }

# Just let rust-analyzer know, so that it will look for examples and show us something like inlay hints.
[[example]]
name = "basic"
path = "examples/basic/src/lib.rs"
crate-type = ["cdylib"]
